# finops-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  create-read-only.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: observability.py
backend/config/: __init__.py  manager.py
backend/knowledge/: __init__.py  store.py
backend/llm/: __init__.py  anthropic_provider.py  openai_provider.py  provider.py
backend/models/: __init__.py  conversation.py  core.py  finding.py  insight.py  session.py
backend/reasoning/: __init__.py  engine.py
backend/reports/: __init__.py  generator.py  html_report.py
backend/server/: main.py
backend/tools/: __init__.py  aws_api.py  aws_costs.py  aws_resources.py  base.py  findings_scheduler.py  findings_store.py  insights_engine.py  insights_scheduler.py  insights_store.py  knowledge.py  live_resources.py  mock_data.py  registry.py  waste_analyzers.py
docs/dev/: README.md
docs/screenshots/: README.md
frontend/: index.html
scripts/: seed_localstack.py  setup.py  test_connection.py
tests/: conftest.py  test_aws_api_allowlist.py  test_config_manager.py  test_finding_severity.py  test_findings_store.py  test_reasoning_heuristics.py  test_tool_registry.py
